# devalkadvies

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
annemieke_app/: __init__.py  config.py  database.py  exporter.py  index_provider.py  kengetallen.py  main.py  models.py  normalizer.py  parser.py  template_exporter.py
annemieke_app/static/: styles.css
annemieke_app/templates/: base.html  dashboard.html  document_detail.html
database/: create_devalkadvies.sql
docs/: parser-aanpak.md  publish.md
scripts/: import_kengetallen_database.py
tests/: test_parser.py
